# darkroom_timer

./: .gitmodules  CMakeLists.txt  README.md  alarm.c  alarm.h  common.h  fixedmath.h  gpio.h  input.c  input.h  lcd.c  lcd.h  main.c  relay.c  relay.h  sdcc-toolchain.cmake  settings.c  settings.h  statemachine.c  statemachine.h
